[gd_scene load_steps=12 format=3 uid="uid://1xiua5wwbkhw"]

[ext_resource type="Script" path="res://gui/coding_progression.gd" id="1_njbp2"]
[ext_resource type="Texture2D" uid="uid://dqwxlreeuh4va" path="res://gui/new bot.png" id="1_qfmlw"]
[ext_resource type="Texture2D" uid="uid://cc3nukfdsit77" path="res://gui/new top.png" id="2_0ml7f"]
[ext_resource type="Texture2D" uid="uid://b8h08hjl6qjp" path="res://gui/selector.png" id="2_etnfb"]
[ext_resource type="Texture2D" uid="uid://dyn4gjkfiji1c" path="res://gui/Coding Bar.png" id="3_nimxm"]
[ext_resource type="Texture2D" uid="uid://cbty7w6l8l404" path="res://gui/Testing Bar.png" id="4_us7hv"]
[ext_resource type="Texture2D" uid="uid://dboacc5aiyv83" path="res://gui/Efficiency Bar.png" id="5_hktj0"]
[ext_resource type="Texture2D" uid="uid://6fmcwd53uuq" path="res://gui/Learning Bar.png" id="6_3ogpd"]
[ext_resource type="Texture2D" uid="uid://bnttcysrx1uyu" path="res://gui/top.png" id="9_gbwtk"]
[ext_resource type="Texture2D" uid="uid://bvl5kbnlmoklr" path="res://gui/pixil-frame-0 (11).png" id="10_udhnv"]
[ext_resource type="Texture2D" uid="uid://dx03wu2mkdvwb" path="res://gui/task_progress_bar2.png" id="11_6m633"]

[node name="Coding Progress" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 24.0
offset_top = 72.0
offset_right = 24.0
offset_bottom = 72.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_njbp2")
task_processing = true
task_active = true

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
offset_right = 40.0

[node name="VBoxContainer3" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="Selector_Sprite" type="Sprite2D" parent="HBoxContainer/VBoxContainer3"]
position = Vector2(0, 5)
scale = Vector2(1, 0.5)
texture = ExtResource("2_etnfb")

[node name="VSplitContainer2" type="VSplitContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="Coding_Bar" type="TextureProgressBar" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
step = 0.0
texture_under = ExtResource("1_qfmlw")
texture_over = ExtResource("2_0ml7f")
texture_progress = ExtResource("3_nimxm")

[node name="Testing_Bar" type="TextureProgressBar" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
step = 0.0
texture_under = ExtResource("1_qfmlw")
texture_over = ExtResource("2_0ml7f")
texture_progress = ExtResource("4_us7hv")

[node name="Efficiency_Bar" type="TextureProgressBar" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
step = 0.0
texture_under = ExtResource("1_qfmlw")
texture_over = ExtResource("2_0ml7f")
texture_progress = ExtResource("5_hktj0")

[node name="Learning_Bar" type="TextureProgressBar" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
step = 0.0
texture_under = ExtResource("1_qfmlw")
texture_over = ExtResource("2_0ml7f")
texture_progress = ExtResource("6_3ogpd")

[node name="VSplitContainer" type="VSplitContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Code_Bar_Prog" type="Label" parent="."]
layout_mode = 2
offset_left = 18.0
offset_top = 3.0
offset_right = 418.0
offset_bottom = 412.0
scale = Vector2(0.01, 0.01)
theme_override_colors/font_color = Color(0, 0.905882, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 45
theme_override_font_sizes/font_size = 300
text = "t"

[node name="Test_Bar_Prog" type="Label" parent="."]
layout_mode = 0
offset_left = 17.0
offset_top = 19.0
offset_right = 417.0
offset_bottom = 428.0
scale = Vector2(0.01, 0.01)
theme_override_colors/font_color = Color(0, 0.211765, 0.984314, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 45
theme_override_font_sizes/font_size = 300
text = "t"

[node name="Eff_Bar_Prog" type="Label" parent="."]
layout_mode = 0
offset_left = 17.0
offset_top = 35.0
offset_right = 417.0
offset_bottom = 444.0
scale = Vector2(0.01, 0.01)
theme_override_colors/font_color = Color(0.790025, 0.341738, 0.0276469, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 45
theme_override_font_sizes/font_size = 300
text = "t"

[node name="Learn_Bar_Prog" type="Label" parent="."]
layout_mode = 0
offset_left = 17.0
offset_top = 51.0
offset_right = 417.0
offset_bottom = 460.0
scale = Vector2(0.01, 0.01)
theme_override_colors/font_color = Color(0.871026, 0.781457, 0.147969, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 45
theme_override_font_sizes/font_size = 300
text = "t"

[node name="Task_Bar_Prog" type="Label" parent="."]
layout_mode = 0
offset_left = 51.0
offset_top = 76.0
offset_right = 851.0
offset_bottom = 1438.0
scale = Vector2(0.01, 0.01)
theme_override_font_sizes/font_size = 1000

[node name="Break_Bar_Prog" type="Label" parent="."]
visible = false
layout_mode = 0
offset_left = 51.0
offset_top = 76.0
offset_right = 851.0
offset_bottom = 1438.0
scale = Vector2(0.01, 0.01)
theme_override_font_sizes/font_size = 1000
text = "tt"

[node name="Progress_Timer" type="Timer" parent="."]
autostart = true

[node name="Break_Timer" type="Timer" parent="."]
wait_time = 5.0

[node name="Camera2D" type="Camera2D" parent="."]
visible = false
position = Vector2(31, 41)
zoom = Vector2(5, 5)

[node name="Task_Progress_Bar" type="TextureProgressBar" parent="."]
layout_mode = 0
offset_left = 8.0
offset_top = 88.0
offset_right = 38.0
offset_bottom = 100.0
scale = Vector2(3.36796, 1.66645)
step = 0.0
texture_over = ExtResource("9_gbwtk")
texture_progress = ExtResource("10_udhnv")

[node name="Breakpoint_Progress_Bar" type="TextureProgressBar" parent="."]
visible = false
layout_mode = 0
offset_left = 8.0
offset_top = 88.0
offset_right = 38.0
offset_bottom = 100.0
scale = Vector2(3.368, 1.666)
step = 0.0
value = 100.0
fill_mode = 6
texture_over = ExtResource("9_gbwtk")
texture_progress = ExtResource("11_6m633")

[node name="Critical_Testing_Bar" type="TextureProgressBar" parent="."]
visible = false
layout_mode = 2
offset_left = 8.0
offset_top = 16.0
offset_right = 38.0
offset_bottom = 28.0
max_value = 10.0
step = 0.0
texture_under = ExtResource("1_qfmlw")
texture_over = ExtResource("2_0ml7f")
texture_progress = ExtResource("3_nimxm")

[node name="Critical_Debugging_Bar" type="TextureProgressBar" parent="."]
visible = false
layout_mode = 2
offset_left = 8.0
offset_top = 32.0
offset_right = 38.0
offset_bottom = 44.0
max_value = 5.0
step = 0.0
texture_under = ExtResource("1_qfmlw")
texture_over = ExtResource("2_0ml7f")
texture_progress = ExtResource("4_us7hv")

[node name="Criticial_Learning_Bar" type="TextureProgressBar" parent="."]
visible = false
layout_mode = 2
offset_left = 8.0
offset_top = 48.0
offset_right = 38.0
offset_bottom = 60.0
max_value = 10.0
step = 0.0
texture_under = ExtResource("1_qfmlw")
texture_over = ExtResource("2_0ml7f")
texture_progress = ExtResource("6_3ogpd")

[node name="Code_Tick_Text" type="Label" parent="."]
layout_mode = 0
offset_left = 20.0
offset_top = -5.0
offset_right = 520.0
offset_bottom = 813.0
scale = Vector2(0.01, 0.01)
theme_override_colors/font_color = Color(0, 0.905882, 0, 1)
theme_override_font_sizes/font_size = 600

[node name="Test_Tick_Text" type="Label" parent="."]
layout_mode = 0
offset_left = 20.0
offset_top = 11.0
offset_right = 520.0
offset_bottom = 829.0
scale = Vector2(0.01, 0.01)
theme_override_colors/font_color = Color(0, 0.211765, 0.984314, 1)
theme_override_font_sizes/font_size = 600

[node name="Eff_Tick_Text" type="Label" parent="."]
layout_mode = 0
offset_left = 20.0
offset_top = 27.0
offset_right = 520.0
offset_bottom = 845.0
scale = Vector2(0.01, 0.01)
theme_override_colors/font_color = Color(0.788235, 0.341176, 0.027451, 1)
theme_override_font_sizes/font_size = 600

[node name="Learn_Tick_Text" type="Label" parent="."]
layout_mode = 0
offset_left = 20.0
offset_top = 43.0
offset_right = 520.0
offset_bottom = 861.0
scale = Vector2(0.01, 0.01)
theme_override_colors/font_color = Color(0.870588, 0.780392, 0.14902, 1)
theme_override_font_sizes/font_size = 600

[node name="Bug_Count_Text" type="Label" parent="."]
layout_mode = 0
offset_left = 78.0
offset_right = 2878.0
offset_bottom = 800.0
scale = Vector2(0.01, 0.01)
theme_override_font_sizes/font_size = 500
text = "Bug Count
"

[node name="Simple_Bugs_Text" type="Label" parent="."]
layout_mode = 0
offset_left = 78.0
offset_top = 8.0
offset_right = 2878.0
offset_bottom = 808.0
scale = Vector2(0.01, 0.01)
theme_override_font_sizes/font_size = 500
text = "Simple: "

[node name="Standard_Bugs_Text" type="Label" parent="."]
layout_mode = 0
offset_left = 78.0
offset_top = 16.0
offset_right = 2878.0
offset_bottom = 816.0
scale = Vector2(0.01, 0.01)
theme_override_font_sizes/font_size = 500
text = "Standard: 
"

[node name="Complex_Bugs_Text" type="Label" parent="."]
layout_mode = 0
offset_left = 78.0
offset_top = 24.0
offset_right = 2878.0
offset_bottom = 824.0
scale = Vector2(0.01, 0.01)
theme_override_font_sizes/font_size = 500
text = "Complex: "

[connection signal="timeout" from="Progress_Timer" to="." method="_on_progress_timer_timeout"]
[connection signal="timeout" from="Break_Timer" to="." method="_on_break_timer_timeout"]
